# maja

./: .gitignore  COPYING  Maja.js  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  dova-utils.js  dova-utils.vapi  dova.vala  js-lang.vapi  jscode.vala  jscodegen.vala  jswriter.vala  main.vala  maja-0.1.pc.in  maja-0.1.vapi
dova-vapi/: dova-app-0.1.deps  dova-base-0.1.vapi  dova-core-0.1.deps  dova-file-0.1.vapi  dova-model-0.1.vapi  dova-module-0.1.vapi  dova-text-0.1.vapi
examples/: Makefile.am
examples/qx/: Makefile.am  README
examples/qx/helloworld/: Makefile.am  main.vala
majac/: .gitignore  Makefile.am  config.vapi  dova-base-0.1.vala  dova-base-0.1.vapi  dova-js.vala  dova-model-0.1.vala  dova.vala  jscode.vala  jscodegen.vala  jswriter.vala  main.vala  maja-utils.js
majac/dova/: dova-app-0.1.vapi  dova-io-0.1.vapi  dova-model-0.1.vapi  dova-net-0.1.vapi  dova-task-0.1.vapi  dova-thread-0.1.vapi
tests/: Makefile.am  blockcapture.vala  capturedloop.vala  dovabase.vala  dovajs.vala  dovamodel.vala  langsupport.vala  test.vala
vapi/: js-lang.vapi  qx.deps  qx.vapi
